# skill-sync

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
design-concepts/: atelier.html  console.html  index.html  topology.html
docs/: plan.md
scripts/: render-icon.mjs
src/: App.tsx  index.css  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: aggregator.rs  audit.rs  discovery.rs  drift.rs  frontmatter.rs  identity.rs  lib.rs  main.rs  package.rs  paths.rs  provenance.rs  sync.rs  trash.rs  types.rs
src-tauri/src/config/: known_bundles.rs  mod.rs  ownership.rs  settings.rs  targets.rs
src-tauri/src/ipc/: commands.rs  git_status.rs  list_packages.rs  mod.rs  remove_from_target.rs  skills_scaffold.rs
src-tauri/tests/: aggregator_test.rs  config_test.rs  discovery_test.rs  drift_test.rs  frontmatter_test.rs  identity_test.rs  package_test.rs  paths_test.rs  provenance_test.rs  sync_test.rs  trash_test.rs  zz_bindings.rs
src-tauri/tests/fixtures/skills/bad-yaml/: SKILL.md
src-tauri/tests/fixtures/skills/good/: SKILL.md
src-tauri/tests/fixtures/skills/no-frontmatter/: SKILL.md
src/components/: activity-list.tsx  app-shell.tsx  cmd-bar.tsx  cmd-palette.tsx  compare-dialog.tsx  drift-badge.tsx  drift-bar.tsx  first-run-modal.tsx  git-status-chip.tsx  health-bar.tsx  library-table.tsx  mascot.tsx  mode-switch.tsx  needs-attention-card.tsx  new-skill-dialog.tsx  orphan-row.tsx  owner-badge.tsx  ownership-inbox.tsx  ownership-picker.tsx  settings-form.tsx  (+8 more)
(+48 files in other folders)
