[package]
name = "skill-sync"
version = "0.1.0"
description = "Sync your authored agent skills across Claude Code, Codex, Cursor, and Cowork"
authors = ["Devin Walker <devin.walker@a8c.com>"]
edition = "2021"

[lib]
name = "skill_sync"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

