[package]
name = "skill-sync"
version = "0.1.0"
description = "Sync your authored agent skills across Claude Code, Codex, Cursor, and Cowork"
authors = ["Devin Walker <devin.walker@a8c.com>"]
edition = "2021"

[lib]
name = "skill_sync"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
trash = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "9", features = ["serde-compat"] }

[dev-dependencies]
tempfile = "3"

